syntax = "proto3";

package MessagePackage;

message Empty {}

message Message {
  string body = 1;
}

message Messages {
  repeated Message messages = 1;
}

service MessageService {
  rpc sendMessage(Message) returns (Message);
  rpc readMessages(Empty) returns (Messages);
  rpc readMessagesStream(Empty) returns (stream Message);
}
